@@ -1,7 +1,7 @@
 /***********************************************************************
 * cu_pc_schema.c
 *
-*        Testing for the schema API functions
+*		 Testing for the schema API functions
 *
 * Portions Copyright (c) 2012, OpenGeo
 *
@@ -594,7 +594,7 @@ test_patch_compress_from_ght_to_lazperf()
 	pc_patch_free((PCPATCH *)patch_ght);
 	pc_patch_free((PCPATCH *)patch_lazperf);
 }
-#endif  /* defined(HAVE_LIBGHT) && defined(HAVE_LAZPERF) */
+#endif	/* defined(HAVE_LIBGHT) && defined(HAVE_LAZPERF) */
 
 static void
 test_patch_pointn_last_first()
@@ -765,6 +765,232 @@ test_patch_pointn_ght_compression()
 	pc_pointlist_free(li);
 }
 
+static void
+test_patch_range_compression_none()
+{
+	int i;
+	int npts = 20;
+	PCPOINTLIST *pl;
+	PCPATCH *pa;
+	PCPATCH *par;
+	char *str;
+
+	pl = pc_pointlist_make(npts);
+
+	for ( i = 0; i < npts; i++ )
+	{
+		PCPOINT *pt = pc_point_make(simpleschema);
+		pc_point_set_double_by_name(pt, "X", i);
+		pc_point_set_double_by_name(pt, "Y", i);
+		pc_point_set_double_by_name(pt, "Z", i * 0.1);
+		pc_point_set_double_by_name(pt, "Intensity", 100 - i);
+		pc_pointlist_add_point(pl, pt);
+	}
+
+	pa = (PCPATCH*)pc_patch_uncompressed_from_pointlist(pl);
+	par = pc_patch_range(pa, 16, 4);
+	str = pc_patch_to_string(par);
+
+	CU_ASSERT_STRING_EQUAL(str,
+	"{\"pcid\":0,\"pts\":[[15,15,1.5,85],[16,16,1.6,84],[17,17,1.7,83],[18,18,1.8,82]]}");
+
+	pcfree(str);
+	pc_patch_free(par);
+	pc_patch_free(pa);
+	pc_pointlist_free(pl);
+}
+
+static void
+test_patch_range_compression_none_with_full_range()
+{
+	int i;
+	int npts = 4;
+	PCPOINTLIST *pl;
+	PCPATCH *pa;
+	PCPATCH *par;
+	char *str;
+
+	pl = pc_pointlist_make(npts);
+
+	for ( i = 0; i < npts; i++ )
+	{
+		PCPOINT *pt = pc_point_make(simpleschema);
+		pc_point_set_double_by_name(pt, "X", i);
+		pc_point_set_double_by_name(pt, "Y", i);
+		pc_point_set_double_by_name(pt, "Z", i * 0.1);
+		pc_point_set_double_by_name(pt, "Intensity", 100 - i);
+		pc_pointlist_add_point(pl, pt);
+	}
+
+	pa = (PCPATCH*)pc_patch_uncompressed_from_pointlist(pl);
+	par = pc_patch_range(pa, 1, npts);
+	CU_ASSERT(pa == par);
+
+	str = pc_patch_to_string(par);
+	CU_ASSERT_STRING_EQUAL(str,
+	"{\"pcid\":0,\"pts\":[[0,0,0,100],[1,1,0.1,99],[2,2,0.2,98],[3,3,0.3,97]]}");
+
+	pcfree(str);
+	pc_patch_free(pa);
+	pc_pointlist_free(pl);
+}
+
+static void
+test_patch_range_compression_none_with_bad_arguments(int first, int count)
+{
+	int i;
+	int npts = 20;
+	PCPOINTLIST *pl;
+	PCPATCH *pa;
+	PCPATCH *par;
+
+	pl = pc_pointlist_make(npts);
+
+	for ( i = 0; i < npts; i++ )
+	{
+		PCPOINT *pt = pc_point_make(simpleschema);
+		pc_point_set_double_by_name(pt, "X", i);
+		pc_point_set_double_by_name(pt, "Y", i);
+		pc_point_set_double_by_name(pt, "Z", i * 0.1);
+		pc_point_set_double_by_name(pt, "Intensity", 100 - i);
+		pc_pointlist_add_point(pl, pt);
+	}
+
+	pa = (PCPATCH*)pc_patch_uncompressed_from_pointlist(pl);
+	par = pc_patch_range(pa, first, count);
+	CU_ASSERT(par == NULL);
+
+	pc_patch_free(pa);
+	pc_pointlist_free(pl);
+}
+
+static void
+test_patch_range_compression_none_with_zero_count()
+{
+	test_patch_range_compression_none_with_bad_arguments(1, 0);
+}
+
+static void
+test_patch_range_compression_none_with_zero_first()
+{
+	test_patch_range_compression_none_with_bad_arguments(0, 1);
+}
+
+static void
+test_patch_range_compression_none_with_out_of_bounds_first()
+{
+	test_patch_range_compression_none_with_bad_arguments(21, 1);
+}
+
+static void
+test_patch_range_compression_lazperf()
+{
+	int i;
+	int npts = 20;
+	PCPOINTLIST *pl;
+	PCPATCH *pa;
+	PCPATCH *par;
+	char *str;
+
+	pl = pc_pointlist_make(npts);
+
+	for ( i = 0; i < npts; i++ )
+	{
+		PCPOINT *pt = pc_point_make(simpleschema);
+		pc_point_set_double_by_name(pt, "X", i);
+		pc_point_set_double_by_name(pt, "Y", i);
+		pc_point_set_double_by_name(pt, "Z", i * 0.1);
+		pc_point_set_double_by_name(pt, "Intensity", 100 - i);
+		pc_pointlist_add_point(pl, pt);
+	}
+
+	pa = (PCPATCH*)pc_patch_lazperf_from_pointlist(pl);
+	par = pc_patch_range(pa, 16, 4);
+	str = pc_patch_to_string(par);
+
+	CU_ASSERT_STRING_EQUAL(str,
+	"{\"pcid\":0,\"pts\":[[15,15,1.5,85],[16,16,1.6,84],[17,17,1.7,83],[18,18,1.8,82]]}");
+
+	pcfree(str);
+	pc_patch_free(par);
+	pc_patch_free(pa);
+	pc_pointlist_free(pl);
+}
+
+static void
+test_patch_range_compression_dimensional(enum DIMCOMPRESSIONS dimcomp)
+{
+	int i;
+	PCPOINTLIST *pl;
+	PCPATCH *pa;
+	PCPATCH *par;
+	PCPATCH_DIMENSIONAL *pad;
+	PCPOINT *pt;
+	char *str;
+	int npts = PCDIMSTATS_MIN_SAMPLE+1; // force to keep custom compression
+
+	// build a dimensional patch
+	pl = pc_pointlist_make(npts);
+
+	for ( i = npts; i >= 0; i-- )
+	{
+		pt = pc_point_make(simpleschema);
+		pc_point_set_double_by_name(pt, "X", i);
+		pc_point_set_double_by_name(pt, "Y", i);
+		pc_point_set_double_by_name(pt, "Z", i);
+		pc_point_set_double_by_name(pt, "Intensity", 10);
+		pc_pointlist_add_point(pl, pt);
+	}
+
+	pad = pc_patch_dimensional_from_pointlist(pl);
+
+	// set dimensional compression for each dimension
+	PCDIMSTATS *stats = pc_dimstats_make(simpleschema);
+	pc_dimstats_update(stats, pad);
+	for ( i = 0; i<pad->schema->ndims; i++ )
+		stats->stats[i].recommended_compression = dimcomp;
+
+	// compress patch
+	pa = (PCPATCH*) pc_patch_dimensional_compress(pad, stats);
+
+	par = pc_patch_range(pa, 16, 4);
+	str = pc_patch_to_string(par);
+
+	CU_ASSERT_STRING_EQUAL(str,
+		"{\"pcid\":0,\"pts\":[[9986,9986,9986,10],[9985,9985,9985,10],[9984,9984,9984,10],[9983,9983,9983,10]]}");
+
+	pcfree(str);
+	pc_patch_free(par);
+	pc_patch_free((PCPATCH *)pad);
+	pc_dimstats_free(stats);
+	pc_patch_free(pa);
+	pc_pointlist_free(pl);
+}
+
+static void
+test_patch_range_compression_dimensional_none()
+{
+	test_patch_range_compression_dimensional(PC_DIM_NONE);
+}
+
+static void
+test_patch_range_compression_dimensional_zlib()
+{
+	test_patch_range_compression_dimensional(PC_DIM_ZLIB);
+}
+
+static void
+test_patch_range_compression_dimensional_sigbits()
+{
+	test_patch_range_compression_dimensional(PC_DIM_SIGBITS);
+}
+
+static void
+test_patch_range_compression_dimensional_rle()
+{
+	test_patch_range_compression_dimensional(PC_DIM_RLE);
+}
+
 /* REGISTER ***********************************************************/
 
 CU_TestInfo patch_tests[] = {
@@ -788,6 +1014,18 @@ CU_TestInfo patch_tests[] = {
 	PC_TEST(test_patch_pointn_dimensional_compression_sigbits),
 	PC_TEST(test_patch_pointn_dimensional_compression_rle),
 	PC_TEST(test_patch_pointn_ght_compression),
+	PC_TEST(test_patch_range_compression_none),
+	PC_TEST(test_patch_range_compression_none_with_full_range),
+	PC_TEST(test_patch_range_compression_none_with_zero_count),
+	PC_TEST(test_patch_range_compression_none_with_zero_first),
+	PC_TEST(test_patch_range_compression_none_with_out_of_bounds_first),
+	PC_TEST(test_patch_range_compression_dimensional_none),
+	PC_TEST(test_patch_range_compression_dimensional_zlib),
+	PC_TEST(test_patch_range_compression_dimensional_sigbits),
+	PC_TEST(test_patch_range_compression_dimensional_rle),
+#ifdef HAVE_LAZPERF
+	PC_TEST(test_patch_range_compression_lazperf),
+#endif
 	CU_TEST_INFO_NULL
 };
 
