@@ -10,6 +10,7 @@
  - PC_Lib_Version(), PC_Script_Version() (#40)
  - PC_Sort(pcpatch,text[]) (#106)
  - PC_IsSorted(pcpatch,text[],boolean) (#106)
+ - PC_Range(pcpatch, int, int) returns pcpatch (#152)
 - Enhancements
  - Support sigbits encoding for 64bit integers (#61)
  - Warn about truncated values (#68)
